--- a/po/R-KernSmooth.pot
+++ b/po/R-KernSmooth.pot
@@ -1,15 +1,36 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: R 2.1.0\n"
+"Project-Id-Version: R 2.3.0\n"
 "Report-Msgid-Bugs-To: bugs@r-project.org\n"
-"POT-Creation-Date: 2005-02-02 11:27\n"
+"POT-Creation-Date: 2009-04-08 12:46\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ASCII\n"
+"Content-Type: text/plain; charset=CHARSET\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 
-msgid "Bandwidth must be a scalar or an array of length gridsize"
+msgid "'bandwidth' must be strictly positive"
+msgstr ""
+
+msgid "Binning grid too coarse for current (small) bandwidth: consider increasing 'gridsize'"
+msgstr ""
+
+msgid "Level should be between 0 and 5"
+msgstr ""
+
+msgid "scale estimate is zero for input data"
+msgstr ""
+
+msgid "x data has zero standard deviation"
+msgstr ""
+
+msgid "y data has zero standard deviation"
+msgstr ""
+
+msgid "'bandwidth' must be a scalar or an array of length 'gridsize'"
+msgstr ""
+
+msgid "KernSmooth 2.22 installed\nCopyright M. P. Wand 1997"
 msgstr ""
