--- a/po/R-en@quot.po
+++ b/po/R-en@quot.po
@@ -22,10 +22,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: R 2.9.0\n"
+"Project-Id-Version: R 2.10.0\n"
 "Report-Msgid-Bugs-To: bugs@r-project.org\n"
-"POT-Creation-Date: 2009-04-08 12:46\n"
-"PO-Revision-Date: 2009-04-08 12:46\n"
+"POT-Creation-Date: 2009-05-22 08:24\n"
+"PO-Revision-Date: 2009-05-22 08:24\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -59,8 +59,8 @@ msgid "'bandwidth' must be a scalar or an array of length 'gridsize'"
 msgstr "‘bandwidth’ must be a scalar or an array of length ‘gridsize’"
 
 msgid ""
-"KernSmooth 2.22 installed\n"
-"Copyright M. P. Wand 1997"
+"KernSmooth 2.23 loaded\n"
+"Copyright M. P. Wand 1997-2009"
 msgstr ""
-"KernSmooth 2.22 installed\n"
-"Copyright M. P. Wand 1997"
+"KernSmooth 2.23 loaded\n"
+"Copyright M. P. Wand 1997-2009"
