--- a/po/R-KernSmooth.pot
+++ b/po/R-KernSmooth.pot
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: R 2.3.0\n"
+"Project-Id-Version: R 2.10.0\n"
 "Report-Msgid-Bugs-To: bugs@r-project.org\n"
-"POT-Creation-Date: 2009-04-08 12:46\n"
+"POT-Creation-Date: 2009-05-22 08:24\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -32,5 +32,5 @@ msgstr ""
 msgid "'bandwidth' must be a scalar or an array of length 'gridsize'"
 msgstr ""
 
-msgid "KernSmooth 2.22 installed\nCopyright M. P. Wand 1997"
+msgid "KernSmooth 2.23 loaded\nCopyright M. P. Wand 1997-2009"
 msgstr ""
