--- a/po/R-de.po
+++ b/po/R-de.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: R 2.9.0 / kernsmooth 2.23\n"
+"Project-Id-Version: R 2.10.0 / kernsmooth 2.23-3\n"
 "Report-Msgid-Bugs-To: bugs@r-project.org\n"
 "POT-Creation-Date: 2009-05-22 08:24\n"
-"PO-Revision-Date: 2009-05-12 15:54+0100\n"
+"PO-Revision-Date: 2009-10-11 13:24+0200\n"
 "Last-Translator: Chris Leick <c.leick@vollbio.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -45,3 +45,5 @@ msgid ""
 "KernSmooth 2.23 loaded\n"
 "Copyright M. P. Wand 1997-2009"
 msgstr ""
+"KernSmooth 2.23 geladen\n"
+"Copyright M.P. Wand 1997-2009"
