--- a/po/R-en@quot.po
+++ b/po/R-en@quot.po
@@ -22,15 +22,16 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: R 2.10.0\n"
+"Project-Id-Version: R 2.16.0\n"
 "Report-Msgid-Bugs-To: bugs@r-project.org\n"
-"POT-Creation-Date: 2009-05-22 08:24\n"
-"PO-Revision-Date: 2009-05-22 08:24\n"
+"POT-Creation-Date: 2012-06-27 09:23\n"
+"PO-Revision-Date: 2012-06-27 09:23\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: en\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgid "'bandwidth' must be strictly positive"
@@ -48,12 +49,6 @@ msgstr "Level should be between 0 and 5"
 
 msgid "scale estimate is zero for input data"
 msgstr "scale estimate is zero for input data"
-
-msgid "x data has zero standard deviation"
-msgstr "x data has zero standard deviation"
-
-msgid "y data has zero standard deviation"
-msgstr "y data has zero standard deviation"
 
 msgid "'bandwidth' must be a scalar or an array of length 'gridsize'"
 msgstr "‘bandwidth’ must be a scalar or an array of length ‘gridsize’"
