--- a/po/R-KernSmooth.pot
+++ b/po/R-KernSmooth.pot
@@ -1,8 +1,7 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: R 2.16.0\n"
-"Report-Msgid-Bugs-To: bugs@r-project.org\n"
-"POT-Creation-Date: 2012-06-27 09:23\n"
+"Project-Id-Version: KernSmooth 2.23-8\n"
+"POT-Creation-Date: 2012-07-16 08:29\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
